feat(device) detect brand POCO models: X3 Pro (M2102J20SI), M3 Pro 5G (M2103K19PG, M2103K19PY) feat(device) detect brand Meizu models: 17 Pro feat(device) detect brand Xiaomi models: Redmi Note 10T (M2103K19Y), Mi Note 10,
feat(device) added tests: Nokia

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10856,6 +10856,8 @@ Meizu:
       model: '16th'
     - regex: 'MZ-16 X(?:[);/ ]|$)'
       model: '16X'
+    - regex: 'meizu 17 Pro(?:[);/ ]|$)'
+      model: '17 Pro'
     - regex: 'Meizu[_ ]note([89])(?:[);/ ]|$)'
       device: 'phablet'
       model: 'Note $1'
@@ -17687,7 +17689,7 @@ X-View:
 
 # POCO (sub brand Xiaomi)
 POCO:
-  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32])|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20SG)(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32])|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20S[GI]|M2103K19P[GY])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
@@ -17700,11 +17702,13 @@ POCO:
       model: 'M2'
     - regex: 'POCO M2 Pro(?:[);/ ]|$)'
       model: 'M2 Pro'
+    - regex: 'M2103K19P[GY](?:[);/ ]|$)'
+      model: 'M3 Pro 5G'
     - regex: '(?:M2007J20C[GT]|POCO X3 NFC)(?:[);/ ]|$)'
       model: 'X3 NFC'
     - regex: '(?:M2007J20CI|POCO X3)(?:[);/ ]|$)'
       model: 'X3'
-    - regex: 'M2102J20SG(?:[);/ ]|$)'
+    - regex: 'M2102J20S[GI](?:[);/ ]|$)'
       model: 'X3 Pro'
     - regex: 'M2006C3MI(?:[);/ ]|$)'
       model: 'C3'
@@ -17713,7 +17717,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19G|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[GY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -17928,6 +17932,9 @@ Xiaomi:
     - regex: 'M2101K7A[GI]'
       model: 'Redmi Note 10'
       device: 'phablet'
+    - regex: 'M2103K19Y'
+      model: 'Redmi Note 10T'
+      device: 'phablet'
     - regex: 'M2101K7B(?:[GI]|NY)(?:[);/ ]|$)'
       model: 'Redmi Note 10S'
       device: 'phablet'
@@ -17956,6 +17963,9 @@ Xiaomi:
       device: 'phablet'
     - regex: 'Mi Note 10 Lite'
       model: 'Mi Note 10 Lite'
+      device: 'phablet'
+    - regex: 'Mi Note 10'
+      model: 'Mi Note 10'
       device: 'phablet'
     - regex: 'MI[ _]Note[ _]([^;/) ]+)?'
       model: 'MI Note $1'
