Adds detection for Gobuster bot/tool

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4334,3 +4334,8 @@
     producer:
       name: Better Uptime
       url: https://betteruptime.com/
+-
+  user_agent: gobuster/3.1.0
+  bot:
+    name: Gobuster
+    url: https://github.com/OJ/gobuster
