--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -572,6 +572,10 @@
     name: ''
     url: ''
 
+- regex: 'gobuster'
+  name: 'Gobuster'
+  url: 'https://github.com/OJ/gobuster'
+
 - regex: 'ichiro/mobile goo'
   name: 'Goo'
   category: 'Search bot'
