feat(device) detect brand Asus models: ZenFone 8 (I006D), ZenFone 8 Flip (I004D) feat(device) detect brand POCO models: X3 Pro, M3 Pro, M3 Pro 5G, F3 feat(device) detect brand Artel model: Q21 Pro feat(device) detect brand Vivo models: Y15 (1901), Z1 Pro (1918), Y12 (1904), V19 (1933)
feat(device) added tests: Samsung Galaxy S20 5G (SM-G981W, SM-G9810), Asus ZenFone Max Pro M1 (X00TDA)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2608,6 +2608,10 @@ Asus:
       model: 'PadFone Infinity'
     - regex: '(?:ASUS_)?A002(A)?'
       model: 'ZenFone AR'
+    - regex: '(?:ASUS_)?I006D'
+      model: 'ZenFone 8'
+    - regex: '(?:ASUS_)?I004D'
+      model: 'ZenFone 8 Flip'
     - regex: '(?:ASUS_)?A006'
       model: 'ZenFone V'
     - regex: '(?:ASUS_)?A009'
@@ -3212,6 +3216,8 @@ Vivo:
       model: 'V17 Neo'
     - regex: 'vivo 1920(?:[);/ ]|$)'
       model: 'V17'
+    - regex: 'vivo 1933(?:[);/ ]|$)'
+      model: 'V19'
     - regex: 'V2022(?:[);/ ]|$)'
       model: 'V20 SE'
     - regex: '(?:VIV-|BBG-)?vivo[ _]1601(?:[);/ ]|$)'
@@ -3274,6 +3280,10 @@ Vivo:
       model: 'Y17'
     - regex: 'vivo 1906(?:[);/ ]|$)'
       model: 'Y11'
+    - regex: 'vivo 1904(?:[);/ ]|$)'
+      model: 'Y12'
+    - regex: 'vivo 1901(?:[);/ ]|$)'
+      model: 'Y15'
     - regex: 'vivo 1915(?:[);/ ]|$)'
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
@@ -3368,6 +3378,8 @@ Vivo:
       model: 'Y97'
     - regex: 'V1801A0(?:[);/ ]|$)'
       model: 'Z1'
+    - regex: 'vivo 1918(?:[);/ ]|$)'
+      model: 'Z1 Pro'
     - regex: 'V1730D[AT](?:[);/ ]|$)'
       model: 'Z1i'
     - regex: 'vivo 1917(?:[);/ ]|$)'
@@ -4208,6 +4220,8 @@ Artel:
       model: '$1'
     - regex: 'Artel[_ ]Komi3'
       model: 'Komi 3'
+    - regex: 'Artel[_ ]Q21_PRO'
+      model: 'Q21 Pro'
     - regex: 'Artel[_ ](Star|Nova|Connect|Choice|Style)'
       model: '$1'
       device: 'tablet'
@@ -17693,27 +17707,27 @@ X-View:
 
 # POCO (sub brand Xiaomi)
 POCO:
-  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32])|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20S[GI]|M2103K19P[GY])(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32]|F3)|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20S[GI]|M2103K19P[GY])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
       model: 'X2'
-    - regex: '(?:M2010J19C[GI]|POCO M3)(?:[);/ ]|$)'
-      model: 'M3'
-    - regex: 'M2012K11AG(?:[);/ ]|$)'
+    - regex: '(?:M2012K11AG|POCO F3)(?:[);/ ]|$)'
       model: 'F3'
     - regex: 'M2004J19PI(?:[);/ ]|$)'
       model: 'M2'
-    - regex: 'POCO M2 Pro(?:[);/ ]|$)'
-      model: 'M2 Pro'
-    - regex: 'M2103K19P[GY](?:[);/ ]|$)'
+    - regex: '(?:M2103K19P[GY]|M3 Pro 5G)(?:[);/ ]|$)'
       model: 'M3 Pro 5G'
+    - regex: 'POCO M([23]) Pro(?:[);/ ]|$)'
+      model: 'M$1 Pro'
+    - regex: '(?:M2010J19C[GI]|POCO M3)(?:[);/ ]|$)'
+      model: 'M3'
     - regex: '(?:M2007J20C[GT]|POCO X3 NFC)(?:[);/ ]|$)'
       model: 'X3 NFC'
+    - regex: '(?:M2102J20S[GI]|X3 Pro)(?:[);/ ]|$)'
+      model: 'X3 Pro'
     - regex: '(?:M2007J20CI|POCO X3)(?:[);/ ]|$)'
       model: 'X3'
-    - regex: 'M2102J20S[GI](?:[);/ ]|$)'
-      model: 'X3 Pro'
     - regex: 'M2006C3MI(?:[);/ ]|$)'
       model: 'C3'
     - regex: 'POCO F2 PRO(?:[);/ ]|$)'
