feat(device) detect brand ZTE models: Blade A31 Lite, Blade A71 (A7030) feat(device) detect brand Vivo models: X50 Pro (2006), X50 (2004), V21 (V2066), V21e(V2061)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3121,7 +3121,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0268]|V2031[E]?A|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0268]|V2031[E]?A|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|V206[16])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3162,8 +3162,12 @@ Vivo:
       model: 'iQOO 5'
     - regex: 'V2025A(?:[);/ ]|$)'
       model: 'iQOO 5 Pro'
-    - regex: 'V2025(?:[);/ ]|$)'
+    - regex: '(?:V2025)(?:[);/ ]|$)'
       model: 'V20'
+    - regex: '(?:V2066)(?:[);/ ]|$)'
+      model: 'V21'
+    - regex: 'V2061(?:[);/ ]|$)'
+      model: 'V21e'
     - regex: 'V2040(?:[);/ ]|$)'
       model: 'V20 (2021)'
     - regex: 'Vivo 1921(?:[);/ ]|$)'
@@ -3262,9 +3266,9 @@ Vivo:
       model: 'X30'
     - regex: 'V1938T(?:[);/ ]|$)'
       model: 'X30 Pro'
-    - regex: 'V2001A(?:[);/ ]|$)'
+    - regex: '(?:V2001A|vivo 2004)(?:[);/ ]|$)'
       model: 'X50'
-    - regex: 'V2005A(?:[);/ ]|$)'
+    - regex: '(?:V2005A|vivo 2006)(?:[);/ ]|$)'
       model: 'X50 Pro'
     - regex: '(?:V2011A|X50 Pro\+)(?:[);/ ]|$)'
       model: 'X50 Pro Plus'
@@ -18796,6 +18800,8 @@ ZTE:
       model: 'Blade AF3'
     - regex: 'A7020(?:[);/ ]|$)'
       model: 'Blade A7s (2020)'
+    - regex: 'A7030'
+      model: 'Blade A71'
     - regex: 'ZTE 2050(?:RU)?'
       model: 'Blade 20 Smart'
     - regex: '902ZT(?:[);/ ]|$)'
@@ -19010,8 +19016,8 @@ ZTE:
       model: 'Blade L8'
     - regex: 'Blade A([357]) (20(?:19|20))'
       model: 'Blade A$1 ($2)'
-    - regex: 'Blade A3 Lite(?:[);/ ]|$)'
-      model: 'Blade A3 Lite'
+    - regex: 'Blade A(31?) Lite'
+      model: 'Blade A$1 Lite'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
       model: 'Blade A6'
     - regex: 'BLADE A6 MAX(?:[);/ ]|$)'
