feat(device) detect brand Tecno Mobile models: Spark 7 (KF6n), Camon 17 Pro (CG8), Camon 17P (CG7n)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16121,6 +16121,10 @@ Tecno Mobile:
       model: 'Camon 16 SE'
     - regex: 'Tecno[ _-]CG6(?:[);/ ]|$)'
       model: 'Camon 17'
+    - regex: 'Tecno[ _-]CG8(?:[);/ ]|$)'
+      model: 'Camon 17 Pro'
+    - regex: 'Tecno[ _-]CG7n?(?:[);/ ]|$)'
+      model: 'Camon 17P'
     - regex: 'Tecno[ _-]CA6(?:[);/ ]|$)'
       model: 'Camon CM'
     - regex: 'Tecno[ _-]CA7(?:[);/ ]|$)'
@@ -16173,6 +16177,8 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
+    - regex: 'TECNO[ _]KF6n(?:[);/ ]|$)'
+      model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
     - regex: 'TECNO[ _]KF7j(?:[);/ ]|$)'
