--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -10122,3 +10122,57 @@
     model: Viper
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; TECNO KF6n) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.88 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 91.0.4472.88
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Spark 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; TECNO CG8) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.120 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Camon 17 Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; TECNO CG7n) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.120 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Camon 17P
+  os_family: Android
+  browser_family: Chrome
