--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2471,7 +2471,7 @@ Garmin-Asus:
 
 # Asus
 Asus:
-  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|(?:P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)|K01[579N])(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[01])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D|P01Y_S'
+  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|(?:P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)|K01[579N])(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[013])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D|P01Y_S'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -2716,7 +2716,7 @@ Asus:
       model: 'ROG Phone 2'
     - regex: '(?:ASUS_)?(?:I003DD?|ZS661KS)'
       model: 'ROG Phone 3'
-    - regex: '(?:ASUS_)?(?:I005DA)'
+    - regex: '(?:ASUS_)?(?:I005DA|ZS673KS)'
       model: 'ROG Phone 5'
 
     # desktop detections
@@ -12248,7 +12248,7 @@ Onda:
 
 # OnePlus
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[037]|LE212[03])(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[037]|LE212[035]|Nord N10 5G|LE210[01])(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'AC200[13](?:[);/ ]|$)'
@@ -12259,7 +12259,7 @@ OnePlus:
       model: 'Nord N100'
     - regex: 'BE2025(?:[);/ ]|$)'
       model: 'Nord N10'
-    - regex: 'BE202[69](?:[);/ ]|$)'
+    - regex: '(BE202[69]|Nord N10 5G)(?:[);/ ]|$)'
       model: 'Nord N10 5G'
     - regex: 'BE2028(?:[);/ ]|$)'
       model: 'Nord N10 Lite'
@@ -12273,7 +12273,9 @@ OnePlus:
       model: '8 5G UW'
     - regex: 'LE211[037](?:[);/ ]|$)'
       model: '9'
-    - regex: 'LE212[03](?:[);/ ]|$)'
+    - regex: 'LE210[01](?:[);/ ]|$)'
+      model: '9R'
+    - regex: 'LE212[035](?:[);/ ]|$)'
       model: '9 Pro'
     - regex: '(?:GM191[01357]|OnePlus 7 Pro)(?:[);/ ]|$)'
       model: '7 Pro'
