Detect new brands: DIGIFORS, FLYCAT, iOutdoor and Detect devices for existing brands: Thomson, S-TELL, Tecno Mobile, Prestigio, HTC, Nomi, Infinix, UMIDIGI, Inoi, RIM, LG, THL (#6804)
* feat(device) detect new brand DIGIFORS model: Smart 400

feat(device) detect brand Thomson model: TEO104G
feat(device) detect brand S-TELL model: M556
feat(device) detect brand Tecno Mobile model: Spark 2 (KA7)
feat(device) detect brand Prestigio models: Grace Z5 (PSP5530DUO), Muze V3 LTE (PSP3495DUO), Wize G3 (PSP3510DUO), Muze D5 LTE (PSP5513DUO)
feat(device) detect brand HTC models: U11 Plus (2Q4D100), One E9 (E9x), One M9 Plus (M9pw),  One A9 (2PQ910), U Play (U-2u)
feat(device) detect brand Nomi models: Libra 4 LTE (C080034), Corsa 4 LTE (C070034), Corsa (C070010), Evo M3 (i5001)
feat(device) detect brand Infinix models: Smart 3 Plus (X627V) Hot 9 (X655D, X655C),

feat(test) add tests: Alcatel 3L (2020) (5029D_EEA), Haier T54P, HTC One M9, Inoi 5X Lite

* feat(device) detect new brand FLYCAT model: Optimum 5003, OPTIMUM 5004, Optimum 5001, Optimum 5002, Optimum 5501
 Unicum 8S, Unicum 1002, Unicum 8003
feat(device) detect new brand iOutdoor model: X
feat(device) detect brand Infinix models: s4 (X626), Hot 9 (X655), Hot 6 (X606)
feat(device) detect brand Inoi models: 3 Lite, 1 Lite
feat(device) detect brand UMIDIGI model: Super
feat(device) detect brand Nomi model: Beat M1 (i4500), Corsa 4 LTE (C070014), Libra 3 3G (C080012)
feat(device) detect brand Tecno Mobile models: Pop 2S (RA8), Spark Air (KC1), Spark 3 Pro (KB8), Pop 2 (B1),
 Spark Youth (KA6), Spark CM (KA9), Pop 2S Pro (KB2j),
feat(device) detect brand RIM model: Bold 9790
feat(device) detect brand THL model: 5000
feat(device) detect brand LG models: G4 (LGH810), Fortune (LG-M153)
feat(device) detect brand Prestigio models: Muze A5 (PSP5502DUO), MultiPad Wize 1177 4G (PMT1177_4G),

feat(test) add tests: Samsung Galaxy Note 9 (SM-N960N), Haier A42P, Tecno Mobile WX3, Tecno Mobile W4
 Asus ZenFon

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -89,7 +89,9 @@ HTC:
     # explicit smartphone models
     - regex: '2PZC5(?:[);/ ]|$)'
       model: 'U11'
-    - regex: 'U11 plus(?:[);/ ]|$)'
+    - regex: 'HTC_U-2u(?:[);/ ]|$)'
+      model: 'U Play'
+    - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
       model: 'U11 Plus'
     - regex: 'U11 life(?:[);/ ]|$)'
       model: 'U11 Life'
@@ -117,19 +119,23 @@ HTC:
       model: 'J Butterfly'
     - regex: 'HTCButterflys901s(?:[);/ ]|$)'
       model: 'Butterfly S'
-    - regex: '(?:0PJA2|0PJA10)(?:[);/ ]|$)'
+    - regex: '(?:0PJA2|0PJA10|HTC One M9)(?:[);/ ]|$)'
       model: 'One M9'
+    - regex: 'HTC[_ ]M9pw(?:[);/ ]|$)'
+      model: 'One M9 Plus'
     - regex: 'HTC(?:6500LVW|PN071)(?:[);/ ]|$)'
       model: 'One M7'
     - regex: '(?:One M8|HTC6525LVW)(?:[);/ ]|$)'
       model: 'One M8'
     - regex: '0PAJ5(?:[);/ ]|$)'
       model: 'One E8'
+    - regex: 'HTC[_ ]E9x(?:[);/ ]|$)'
+      model: 'One E9'
     - regex: 'HTC6515LVW(?:[);/ ]|$)'
       model: 'One Remix'
     - regex: 'X525a(?:[);/ ]|$)'
       model: 'One X+'
-    - regex: '2PQ93(?:[);/ ]|$)'
+    - regex: '2PQ9(?:3|10)(?:[);/ ]|$)'
       model: 'One A9'
     - regex: 'ADR6300'
       model: 'Droid Incredible'
@@ -484,6 +490,8 @@ RIM:
       model: 'Evolve'
     - regex: 'BBH100-1'
       model: 'Evolve X'
+    - regex: '(?:BlackBerry )?(9000|9790)'
+      model: 'Bold $1'
     - regex: 'STV100-[1234]'
       model: 'BlackBerry Priv'
     - regex: 'STH100-[12]'
@@ -497,8 +505,6 @@ RIM:
       model: 'BlackBerry $1'
     - regex: 'rim([0-9]+)'
       model: 'BlackBerry $1'
-    - regex: '9000'
-      model: 'Bold 9000'
     - regex: '9300'
       model: 'Curve 3G 9300'
     - regex: '(8520|8530|9220|9320|9360)'
@@ -8128,6 +8134,8 @@ Infinix:
       model: 'Hot 7'
     - regex: 'Infinix[ _-]X650'
       model: 'Hot 8'
+    - regex: 'Infinix[ _-]X655'
+      model: 'Hot 9'
     - regex: 'Infinix[ _-]X680'
       model: 'Hot 9 Play'
     - regex: 'Infinix[ _-]X573B?'
@@ -8137,6 +8145,8 @@ Infinix:
       model: 'Smart'
     - regex: 'Infinix[ _-]X5515F'
       model: 'Smart 2'
+    - regex: 'Infinix[ _-]X627V'
+      model: 'Smart 3 Plus'
     - regex: 'Infinix[ _-]X5514D'
       model: 'Smart 2 Pro'
     - regex: 'Infinix[ _-]X653'
@@ -9110,6 +9120,12 @@ Land Rover:
     - regex: 'Polar3'
       model: 'Ioutdoor Polar 3'
 
+# iOutdoor
+iOutdoor:
+  regex: 'iOutdoor (X)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
 # lanix (lanix.com)
 Lanix:
   regex: 'LANIX-([a-z0-9]+)|Ilium[ _]|IliumPad|X120C|Alpha 950'
@@ -9742,7 +9758,7 @@ LG:
       model: 'G3 Cat. 6'
     - regex: 'LG-D724'
       model: 'G3s'
-    - regex: 'LG-H81[012589]|LG-?[LU]S991|LGV32|LG-F500[LSK]'
+    - regex: 'LG-?H81[012589]|LG-?[LU]S991|LGV32|LG-F500[LSK]'
       model: 'G4'
     - regex: 'LG-H525n?'
       model: 'G4c'
@@ -9892,6 +9908,8 @@ LG:
       model: 'Stylo 6'
     - regex: 'LM-G710(N|VM)?|LG-G710'
       model: 'G7 ThinQ'
+    - regex: 'LG-M153'
+      model: 'Fortune'
     - regex: 'LM-X210CM'
       model: 'Fortune 2'
     - regex: 'LM-X410\.FG?(?:[);/ ]|$)'
@@ -11823,13 +11841,15 @@ Opsson:
     - regex: '(?:Opsson-)?Opsson[ -_]([^/;]+)/'
       model: '$1'
 
-# Nomi
+# Nomi (nomi-electronics.com)
 Nomi:
   regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i50[57]0|i5510|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3]|i(?:50[015]|450|40[01]|55[02]))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'i501[23](?:[);/ ]|$)'
       model: 'Evo M2'
+    - regex: 'Nomi_i5001(?:[);/ ]|$)'
+      model: 'Evo M3'
     - regex: 'I5070(?:[);/ ]|$)'
       model: 'Iron-X'
     - regex: 'i5014(?:[);/ ]|$)'
@@ -11840,6 +11860,8 @@ Nomi:
       model: 'Evo Z'
     - regex: 'Nomi_i4510(?:[);/ ]|$)'
       model: 'Beat M'
+    - regex: 'Nomi_i4500(?:[);/ ]|$)'
+      model: 'Beat M1'
     - regex: 'i5532(?:[);/ ]|$)'
       model: 'Space X2'
     - regex: 'i5510(?:[);/ ]|$)'
@@ -11852,8 +11874,20 @@ Nomi:
     - regex: '(?:Nomi_)?C101040'
       model: 'Ultra 3 Pro'
       device: 'tablet'
+    - regex: '(?:Nomi_)?C070010'
+      model: 'Corsa'
+      device: 'tablet'
     - regex: '(?:Nomi_)?C070011'
       model: 'Corsa 2'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C0700[13]4'
+      model: 'Corsa 4 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C080012'
+      model: 'Libra 3 3G'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C080034'
+      model: 'Libra 4 LTE'
       device: 'tablet'
     - regex: '(?:Nomi_)?C07008'
       model: 'Sigma'
@@ -13254,8 +13288,8 @@ S-TELL:
   regex: 'S-TELL'
   device: 'smartphone'
   models:
-    - regex: '(?:S-TELL[ _])?M4(61|77|80)'
-      model: 'M4$1'
+    - regex: '(?:S-TELL[ _])?M(4(?:61|77|80)|556)'
+      model: 'M$1'
 
 # Safaricom
 Safaricom:
@@ -14847,7 +14881,7 @@ SWISSMOBILITY:
 
 # Thomson
 Thomson:
-  regex: '(?:Primo(7|8)|QM73[45]-8G|QM734-2|QM736-8G\(HD\)|(?<!\.)8950|MID1002|5014G|TEO7RK|Friendly_TH101|Delight TH201)(?:[);/ ]|$)|(?:Tlink|Every)[0-9]+|THOMSON,'
+  regex: '(?:Primo(7|8)|QM73[45]-8G|QM734-2|QM736-8G\(HD\)|(?<!\.)8950|MID1002|5014G|TEO7RK|TEO104G|Friendly_TH101|Delight TH201)(?:[);/ ]|$)|(?:Tlink|Every)[0-9]+|THOMSON,'
   device: 'tablet'
   models:
     # already detected as manta device
@@ -14865,8 +14899,8 @@ Thomson:
       model: 'QM736-8G (HD)'
     - regex: '(?<!\.)8950(?:[);/ ]|$)'
       model: '3G 8950'
-    - regex: 'TEO7RK(?:[);/ ]|$)'
-      model: 'TEO7RK'
+    - regex: 'TEO(7RK|104G)(?:[);/ ]|$)'
+      model: 'TEO$1'
 
     - regex: '5014G(?:[);/ ]|$)'
       device: 'smartphone'
@@ -15144,16 +15178,28 @@ Prestigio:
     - regex: 'PSP5470DUO'
       device: 'smartphone'
       model: 'Grace X5'
+    - regex: 'PSP5530DUO'
+      device: 'smartphone'
+      model: 'Grace Z5'
     - regex: 'PSP5515DUO'
       device: 'smartphone'
       model: 'Grace P5'
     - regex: 'PSP5506DUO'
       device: 'smartphone'
       model: 'Grace Q5'
-    - regex: 'PSP3552DUO(?:[);/ ]|$)'
+    - regex: 'PSP3552DUO'
       device: 'smartphone'
       model: 'Muze H3'
-    - regex: 'PSP3511DUO(?:[);/ ]|$)'
+    - regex: 'PSP3495DUO'
+      device: 'smartphone'
+      model: 'Muze V3 LTE'
+    - regex: 'PSP5513DUO'
+      device: 'smartphone'
+      model: 'Muze D5 LTE'
+    - regex: 'PSP5502DUO'
+      device: 'smartphone'
+      model: 'Muze A5'
+    - regex: 'PSP3511DUO'
       device: 'smartphone'
       model: 'Muze G3 LTE'
     - regex: 'PSP7550DUO(?:[);/ ]|$)'
@@ -15168,9 +15214,12 @@ Prestigio:
     - regex: 'PSP3532DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze F3'
-    - regex: 'PSP3423DUO(?:[);/ ]|$)'
+    - regex: 'PSP3423DUO'
       device: 'smartphone'
       model: 'Wize R3'
+    - regex: 'PSP3510DUO'
+      device: 'smartphone'
+      model: 'Wize G3'
     # explicit tables models
     - regex: 'PMT3277_3G'
       model: 'MultiPad Ranger 7.0" 3G'
@@ -15186,6 +15235,8 @@ Prestigio:
       model: 'MultiPad Ranger 8.0 3G'
     - regex: 'PMT3208[_ ]3G'
       model: 'MultiPad Wize 8.0 3G'
+    - regex: 'PMT1177_4G'
+      model: 'MultiPad Wize 1177 4G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
     - regex: 'PSP7610DUO([ _][A-Z]{2})?'
@@ -16036,8 +16087,14 @@ Tecno Mobile:
       model: 'Camon X Pro'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
+    - regex: 'TECNO[ _]B1(?:[);/ ]|$)'
+      model: 'Pop 2'
     - regex: 'TECNO[ _]B1[fg](?:[);/ ]|$)'
       model: 'Pop 2F'
+    - regex: 'TECNO[ _]RA8(?:[);/ ]|$)'
+      model: 'Pop 2S'
+    - regex: 'TECNO[ _]KB2j(?:[);/ ]|$)'
+      model: 'Pop 2S Pro'
     - regex: 'TECNO[ _]BA2(?:[);/ ]|$)'
       model: 'Pop 2 Plus'
     - regex: 'TECNO[ _]B1p(?:[);/ ]|$)'
@@ -16052,8 +16109,12 @@ Tecno Mobile:
       model: 'Pop 4 Air'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
+    - regex: 'Tecno[ _]KA7(?:[);/ ]|$)'
+      model: 'Spark 2'
     - regex: 'Tecno[ _]KB7j?(?:[);/ ]|$)'
       model: 'Spark 3'
+    - regex: 'Tecno[ _]KB8?(?:[);/ ]|$)'
+      model: 'Spark 3 Pro'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
@@ -16078,6 +16139,12 @@ Tecno Mobile:
       model: 'Spark 7P'
     - regex: 'TECNO[ _]KC1h(?:[);/ ]|$)'
       model: 'Spark Go'
+    - regex: 'TECNO[ _]KC1(?:[);/ ]|$)'
+      model: 'Spark Air'
+    - regex: 'TECNO[ _]KA6(?:[);/ ]|$)'
+      model: 'Spark Youth'
+    - regex: 'TECNO[ _]KA9(?:[);/ ]|$)'
+      model: 'Spark CM'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
@@ -16331,11 +16398,13 @@ Telit:
 
 # ThL
 ThL:
-  regex: 'ThL[ _-]|Knight 2'
+  regex: 'ThL[ _-]|Knight 2|THL5000'
   device: 'smartphone'
   models:
     - regex: 'Knight 2'
       model: 'Knight 2'
+    - regex: 'THL ?(5000)'
+      model: '$1'
     - regex: 'ThL[ _-]*([^;/]+) Build'
       model: '$1'
     - regex: 'ThL[ _-]*([^ ;/)]+)(?:[);/ ]|$)'
@@ -16625,6 +16694,8 @@ UMIDIGI:
       model: 'Bison'
     - regex: 'hammer_S'
       model: 'Hammer S'
+    - regex: 'UMI[_ ]SUPER'
+      model: 'Super'
     - regex: 'S2 LITE'
       model: 'S2 Lite'
     - regex: 'UMI_(London|Diamond(?:_X)?)'
@@ -18282,6 +18353,17 @@ MLS:
     - regex: 'iQD700(?:[);/ ]|$)'
       model: 'Color Fingerprint 4G'
 
+# FLYCAT
+FLYCAT:
+  regex: 'FLYCAT'
+  device: 'smartphone'
+  models:
+    - regex: 'OPTIMUM (500[1-4]|5501)'
+      model: 'Optimum $1'
+    - regex: 'UNICUM (1002|8S|8003)'
+      device: 'tablet'
+      model: 'Unicum $1'
+
 # Fly
 Fly:
   regex: 'Fly(?!Flow|touch)|Power Plus 5000|Photo Pro|Slimline|Life (?:Ace|Jet|Sky|Compact 4G|Geo|Zen|Play)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?:[);/ ]|$)'
@@ -19221,6 +19303,8 @@ Inoi:
   models:
     - regex: 'INOI 2 Lite 2019'
       model: '2 Lite (2019)'
+    - regex: 'INOI[_ ]([13])[_ ]LITE'
+      model: '$1 Lite'
     - regex: 'INOI ([257]) (2019|202[01])(?:[);/ ]|$)'
       model: '$1 ($2)'
     - regex: 'INOI[_ ]([^);/]+)(?: Build|[;)])'
@@ -23535,3 +23619,9 @@ AG Mobile:
   regex: '(Hashtag|Shine|Chacer)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# DIGIFORS (digifors.ru)
+DIGIFORS:
+  regex: 'DIGIFORS (400)(?:[);/ ]|$)'
+  device: 'tv'
+  model: 'Smart $1'
