--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4339,3 +4339,8 @@
   bot:
     name: Gobuster
     url: https://github.com/OJ/gobuster
+-
+  user_agent: k6/0.31.1 (https://k6.io/)
+  bot:
+    name: K6
+    url: https://k6.io/
