Adds detection for Neevabot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4344,3 +4344,12 @@
   bot:
     name: K6
     url: https://k6.io/
+-
+  user_agent: Mozilla/5.0 (compatible; Neevabot/1.0;  https://neeva.com/neevabot)
+  bot:
+    name: Neevabot
+    category: Search bot
+    url: https://neeva.com/neevabot
+    producer:
+      name: Neeva Inc.
+      url: https://neeva.com/
