feat(bots) detect bot: LinkPreview

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4339,3 +4339,9 @@
   bot:
     name: Gobuster
     url: https://github.com/OJ/gobuster
+-
+  user_agent: LinkPreview/1.5 (http://linkpreview.net)
+  bot:
+    name: LinkPreview
+    category: Service Agent
+    url: https://www.linkpreview.net/
