--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2529,6 +2529,11 @@
     name: 'Komodia Inc.'
     url: 'https://www.komodia.com/'
 
+- regex: 'LinkPreview/([\d+\.])'
+  name: 'LinkPreview'
+  category: 'Service Agent'
+  url: 'https://www.linkpreview.net/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
