feat(bots) detect bot: JungleKeyThumbnail

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4345,3 +4345,9 @@
     name: LinkPreview
     category: Service Agent
     url: https://www.linkpreview.net/
+-
+  user_agent: Mozilla/5.0 (compatible; JungleKeyThumbnail/1.1; +http://www.junglekey.fr/)
+  bot:
+    name: JungleKeyThumbnail
+    category: Crawler
+    url: https://junglekey.com/
