feat(device) detect new brand 3GO model: Aplay 3 feat(device) detect brand Highscreen models: Alpha GTR, Wallet feat(device) detect brand Cyrus model: Apel feat(device) detect brand Vernee model: T3 Pro feat(device) detect brand DEXP model: G255, Ursus S290, Ursus S370, Ursus S380 feat(device) detect brand Leagoo models: M9 Pro, Power 5 feat(device) detect brand Jinga models: Neon, Start, Start LTE feat(device) detect brand QMobile model: Vita S feat(device) detect brand Doogee models: S70 Lite, S80 Lite, X10S feat(device) detect brand Ulefone model: S9 Pro feat(device) detect brand Droxio models: KENTIA, A47 feat(device) detect brand Explay model: JoyTV

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4699,7 +4699,7 @@ Crescent:
 
 # Cyrus
 Cyrus:
-  regex: 'Cyrus[ _-]'
+  regex: 'Cyrus[ _-]|CyrusApel'
   device: 'smartphone'
   models:
     - regex: 'Cyrus[ _-]?([^;/)]+) Build'
@@ -4802,7 +4802,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[123]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260|GS15[035]| (?:N280i|P380i|R110|E210|BL155|BL160|A160|B450|B340|B35[05]|T155|A1[45]0|A340|AS160|GL[23]55|G250|G15[05]|ES750|XL150|S280|Z[34]55|H170|P510|L2[17]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|S(?:3[78]0|2[89]0)|AL(?:[12]40|[23]50)|AS(?:155|[12]60)| (?:N280i|P380i|R110|E210|A160|B450|B340|B35[05]|T155|A1[45]0|A340|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[34]55|H170|P510|L2[17]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -4828,11 +4828,11 @@ DEXP:
     - regex: 'Ursus[ _]([^;/)]+)(?: Build|[);])'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10|VA170|E210|R110|N280i|P380i|P510|S280|H170|L2[17]0)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170|E210|R110|N280i|P380i|P510|S2[89]0|S3[78]0|H170|L2[17]0)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
-    - regex: ' (B450|B340|B35[05]|BL155|BL160|A160|A340|T155|Z[34]55|G250)(?:[);/ ]|$)'
+    - regex: ' (B450|B340|B35[05]|BL155|BL160|A160|A340|T155|Z[34]55|G25[05])(?:[);/ ]|$)'
       model: '$1'
     - regex: 'SENIOR(?:[);/ ]|$)'
       model: 'Senior'
@@ -5038,7 +5038,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S40Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|Iron-bone DG750)(?:[);/ ]|$)'
+  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S[478]0Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|Iron-bone DG750|X10S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -5051,7 +5051,7 @@ Doogee:
       model: 'Leo $1'
     - regex: 'Iron-bone (DG750)'
       model: 'Iron Bone $1'
-    - regex: '(BL[579]000|S90C)(?:[);/ ]|$)'
+    - regex: '(BL[579]000|S90C|X10S)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'X95Pro(?:[);/ ]|$)'
       model: 'X95 Pro'
@@ -5065,8 +5065,8 @@ Doogee:
       model: 'BL12000'
     - regex: 'S([568]8|9[056]|59|40)Pro'
       model: 'S$1 Pro'
-    - regex: 'S40Lite'
-      model: 'S40 Lite'
+    - regex: 'S([478]0)Lite'
+      model: 'S$1 Lite'
     - regex: 'KISSME-DG580'
       model: 'Kissme DG580'
     - regex: 'Hitman_DG850'
@@ -6521,7 +6521,7 @@ GoMobile:
 
 # Explay
 Explay:
-  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-4]|RioPlay|Leader|Pulsar|Infinityll|Imperium[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?|Onyx(?!_[A-Z]{1,2})'
+  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-4]|RioPlay|Leader|Pulsar|Infinityll|Joy_TV|Imperium[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?|Onyx(?!_[A-Z]{1,2})'
   device: 'tablet'
   models:
     - regex: 'ActiveD[ _]7.4[ _]3G'
@@ -6557,6 +6557,9 @@ Explay:
     - regex: 'Onyx(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Onyx'
+    - regex: 'Joy_TV(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'JoyTV'
     - regex: '[\w]+-EXPLAY-FIN'
       device: 'feature phone'
       model: 'Fin'
@@ -9225,11 +9228,11 @@ LCT:
 
 # Leagoo
 Leagoo:
-  regex: '(?:MY)?LEAGOO[ _-]?|(?:Shark 5000|M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _](?:X|7s)|Elite [15]|Venture 1|Z10-E|Power 2(?: Pro)?)(?:[);/ ]|$)'
+  regex: '(?:MY)?LEAGOO[ _-]?|(?:Shark 5000|M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _](?:X|7s)|Elite [15]|Venture 1|Z10-E|M9 Pro|Power 5|Power 2(?: Pro)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'LEAGOO[- _]M8[_-]?Pro(?:[);/ ]|$)'
-      model: 'M8 Pro'
+    - regex: '(?:LEAGOO[- _])?M([89])[_-]?Pro(?:[);/ ]|$)'
+      model: 'M$1 Pro'
     - regex: 'LEAGOO[- _](Z[156]|Z5c|M[58]|T1)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'M5 EDGE'
@@ -9246,8 +9249,8 @@ Leagoo:
       model: 'Shark 5000'
     - regex: 'Power 2 Pro(?:[);/ ]|$)'
       model: 'Power 2 Pro'
-    - regex: 'Power 2(?:[);/ ]|$)'
-      model: 'Power 2'
+    - regex: 'Power ([25])(?:[);/ ]|$)'
+      model: 'Power $1'
     - regex: 'Venture 1(?:[);/ ]|$)'
       model: 'Venture 1'
     - regex: '(?:LEAGOO[- _])?(Z10-E|M6)(?:[);/ ]|$)'
@@ -15372,7 +15375,7 @@ Qilive:
 
 # QMobile (qmobile.com.pk)
 QMobile:
-  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:E2 Noir|Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT[57]00 PRO|LT950|Q Infinity|Hot Pro 2)(?:[);/ ]|$)'
+  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:E2 Noir|Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT[57]00 PRO|LT950|Q Infinity|Hot Pro 2|VITA S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'JazzX JS7 PRO'
@@ -15391,6 +15394,8 @@ QMobile:
       model: 'Noir LT$1 Pro'
     - regex: 'LUNA PRO'
       model: 'Luna Pro'
+    - regex: 'VITA S'
+      model: 'Vita S'
     - regex: 'NICE S'
       model: 'Nice S'
     - regex: 'Q Infinity PRO'
@@ -16675,11 +16680,11 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Note [89]P|Armor(?:[ _](?:[2367]|2S|X[236]|6[SE]|3WT|3W|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?|Note 11P)(?:[);/ ]|$)'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|S(?:10|9)_Pro|(?:Note [89]P|Armor(?:[ _](?:[2367]|2S|X[236]|6[SE]|3WT|3W|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?|Note 11P)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'S10_Pro'
-      model: 'S10 Pro'
+    - regex: 'S(10|9)_Pro'
+      model: 'S$1 Pro'
     - regex: 'Be[ _]Touch([ _][23])?'
       model: 'Be Touch$1'
     - regex: 'Be[ _]Pure[ _]Lite'
@@ -16875,7 +16880,7 @@ VK Mobile:
 
 # Vernee
 Vernee:
-  regex: 'Vernee|Mars Pro|Apollo[ _](?:Lite|X)|Thor (?:E|Plus)|X2_euro|M7_EEA'
+  regex: 'Vernee|(?:Mars Pro|Apollo[ _](?:Lite|X)|Thor (?:E|Plus)|X2_euro|M7_EEA|T3 Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Apollo[ _]Lite'
@@ -16894,6 +16899,8 @@ Vernee:
       model: 'M7'
     - regex: 'X2_euro'
       model: 'X2'
+    - regex: 'T3 Pro'
+      model: 'T3 Pro'
     - regex: 'Vernee[ _-]([^;/]+) Build'
       model: '$1'
     - regex: 'Vernee[ _-]([a-z0-9_-]+)'
@@ -19580,10 +19587,10 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime L|Spade|Spark 2)(?:[);/ ]|$)'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime L|Spade|Spark 2|Alpha GTR|Wallet)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])(?:[);/ ]|$)'
+    - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS]|Alpha GTR|Wallet)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'PowerFivePro(?:[);/ ]|$)'
       model: 'Power Five Pro'
@@ -20261,11 +20268,20 @@ Datawind:
       device: 'tablet'
       model: 'Ubislate 7W'
 
-# Droxio
+# Droxio (droxio.es) sub brand 3GO
 Droxio:
-  regex: 'DROXIO (C40|B45)(?:[);/ ]|$)'
+  regex: 'DROXIO (C40|A47|B45|KENTIA)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# 3GO (www.3go.es)
+3GO:
+  regex: '(?:DROXIO (?:C40|A47|B45|KENTIA)|Aplay 3)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Aplay 3'
+      device: 'tablet'
+      model: 'Aplay 3'
 
 # Goophone
 Goophone:
@@ -21014,9 +21030,9 @@ TurboKids:
   device: 'tablet'
   model: '$1'
 
-# Jinga
+# Jinga (jinga.ru)
 Jinga:
-  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start3G|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2)|M500-1|Hit4G)(?:[);/ ]|$)'
+  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start(?:3G|LTE)?|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2)|M500-1|Hit4G|Neon(?!/))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Optim4G(?:[);/ ]|$)'
@@ -21036,7 +21052,11 @@ Jinga:
     - regex: 'Touch4G(?:[);/ ]|$)'
       model: 'Touch 4G'
     - regex: 'Start3G(?:[);/ ]|$)'
-      model: 'Start 4G'
+      model: 'Start 3G'
+    - regex: 'StartLTE(?:[);/ ]|$)'
+      model: 'Start LTE'
+    - regex: 'Start(?:[);/ ]|$)'
+      model: 'Start'
     - regex: 'PicassoNote(?:[);/ ]|$)'
       model: 'Picasso Note'
     - regex: 'Jinga Iron(?:[);/ ]|$)'
@@ -21053,6 +21073,8 @@ Jinga:
       model: 'IGO L2'
     - regex: '(?:JINGA[_ ])?IGO[_ ]([ML]1|L4)(?:[);/ ]|$)'
       model: 'IGO $1'
+    - regex: '(?:JINGA[_ ])?(Neon)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'Jinga Trezor S1 Plus(?:[);/ ]|$)'
       model: 'Trezor S1 Plus'
 
