--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -6789,3 +6789,305 @@
     model: Light A104
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; Alpha GTR Build/JZO54K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Highscreen
+    model: Alpha GTR
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; CyrusApel Build/JZO54K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.83 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 58.0.3029.83
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Cyrus
+    model: Apel
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; T3 Pro Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/70.0.3538.80 Mobile Safari/537.36 Instagram 70.0.0.22.98 Android (27/8.1.0; 320dpi; 720x1344; vernee; T3 Pro; T3_Pro; mt6739; ru_RU; 130580485)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 70.0.0.22.98
+  device:
+    type: smartphone
+    brand: Vernee
+    model: T3 Pro
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; M9 Pro Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.137 Mobile Safari/537.36 Instagram 87.0.0.18.99 Android (27/8.1.0; 320dpi; 720x1344; LEAGOO; M9 Pro; M9_Pro; mt6739; ru_RU; 148324047)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 87.0.0.18.99
+  device:
+    type: smartphone
+    brand: Leagoo
+    model: M9 Pro
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Neon Build/OPM2.171019.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/69.0.3497.100 Mobile Safari/537.36 Instagram 108.0.0.23.119 Android (27/8.1.0; 240dpi; 480x800; Jinga; Neon; Neon; k101; ru_RU; 169474956)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 108.0.0.23.119
+  device:
+    type: smartphone
+    brand: Jinga
+    model: Neon
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Power 5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 75.0.3770.143
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Leagoo
+    model: Power 5
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0; VITA S) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.87 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 80.0.3987.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: QMobile
+    model: Vita S
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; S70Lite Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.157 Mobile Safari/537.36 Instagram 93.1.0.19.102 Android (27/8.1.0; 480dpi; 1080x2016; DOOGEE; S70Lite; S70Lite; mt6763; ru_RU; 154400383)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 93.1.0.19.102
+  device:
+    type: smartphone
+    brand: Doogee
+    model: S70 Lite
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; S80Lite) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 74.0.3729.157
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Doogee
+    model: S80 Lite
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; S9_Pro Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (27/8.1.0; 320dpi; 720x1344; Ulefone; S9_Pro; S9_Pro; mt6739; ru_RU; 149350058)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 88.0.0.14.99
+  device:
+    type: smartphone
+    brand: Ulefone
+    model: S9 Pro
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Start Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.157 Mobile Safari/537.36 Instagram 93.1.0.19.102 Android (27/8.1.0; 270dpi; 720x1280; Jinga; Start; JI50AG2_169HP; mt6580; ru_RU; 154400374)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 93.1.0.19.102
+  device:
+    type: smartphone
+    brand: Jinga
+    model: Start
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; StartLTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 79.0.3945.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Jinga
+    model: Start LTE
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Wallet Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/65.0.3325.109 Mobile Safari/537.36 Instagram 75.0.0.23.99 Android (27/8.1.0; 320dpi; 720x1184; lephone/highscreen; Wallet; Wallet; mt6735; ru_RU; 135374890)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 75.0.0.23.99
+  device:
+    type: smartphone
+    brand: Highscreen
+    model: Wallet
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; X10S Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36 Instagram 85.0.0.21.100 Android (27/8.1.0; 240dpi; 480x854; Vanzo/DOOGEE; X10S; X10S; mt6580; ru_RU; 146536616)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 85.0.0.21.100
+  device:
+    type: smartphone
+    brand: Doogee
+    model: X10S
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; DROXIO KENTIA Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (19/4.4.2; 320dpi; 720x1280; 3GO; DROXIO KENTIA; DROXIO KENTIA; mt6582; ru_RU; 155374060)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 94.0.0.22.116
+  device:
+    type: smartphone
+    brand: Droxio
+    model: KENTIA
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.1; Droxio A47 Build/JOP40D)
+  os:
+    name: Android
+    version: 4.2.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Droxio
+    model: A47
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Joy_TV Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 Instagram 75.0.0.23.99 Android (19/4.4.2; 240dpi; 480x800; Explay; Joy_TV; Joy_TV; mt6572; ru_RU; 135374887)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 75.0.0.23.99
+  device:
+    type: smartphone
+    brand: Explay
+    model: JoyTV
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; G255 Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 Mobile Safari/537.36 Instagram 85.0.0.21.100 Android (27/8.1.0; 240dpi; 480x888; DEXP; G255; G255; mt6580; ru_RU; 146536616)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 85.0.0.21.100
+  device:
+    type: smartphone
+    brand: DEXP
+    model: G255
+  os_family: Android
+  browser_family: Unknown
