--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -8663,3 +8663,73 @@
     model: M74C 3G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; S290) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 76.0.3809.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: DEXP
+    model: Ursus S290
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; S370) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: DEXP
+    model: Ursus S370
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; S380 Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.92 Safari/537.36 Instagram 112.0.0.29.121 Android (27/8.1.0; 160dpi; 800x1232; DEXP; S380; S380; mt6580; ru_RU; 174081646)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 112.0.0.29.121
+  device:
+    type: tablet
+    brand: DEXP
+    model: Ursus S380
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; Aplay 3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 3GO
+    model: Aplay 3
+  os_family: Android
+  browser_family: Chrome
